add account deletion informations

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body>
     <div class="container">
         <h1>Privacy Policy for Jendo Health</h1>
-        <p class="last-updated">Last Updated: January 8, 2026</p>
+        <p class="last-updated">Last Updated: January 9, 2026</p>
 
         <div class="section">
             <p>Welcome to Jendo Health ("we," "our," or "us"). We are committed to protecting your privacy and ensuring the security of your personal health information. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our mobile application.</p>
@@ -293,18 +293,23 @@
         </div>
 
         <div class="section">
-            <h2>13. Contact Us</h2>
+            <h2>13. Account Deletion</h2>
+            <p>If you wish to delete your Jendo Health account and all associated data, please contact our support team at <a href="mailto:info@jendoinnovations.com">info@jendoinnovations.com</a> with the subject line "Delete Account". We will verify your identity and delete your data within 30 days.</p>
+        </div>
+
+        <div class="section">
+            <h2>14. Contact Us</h2>
             <p>If you have questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact us:</p>
             <ul>
-                <li><strong>Email:</strong> privacy@jendohealth.com</li>
-                <li><strong>Support:</strong> support@jendohealth.com</li>
-                <li><strong>Address:</strong> [Your Company Address]</li>
+                <li><strong>Email:</strong> info@jendoinnovations.com</li>
+                <li><strong>Support:</strong> info@jendoinnovations@gmail.com</li>
+                <li><strong>Address:</strong> [Bay 09, Trace Expert City, AC19, Colombo 10]</li>
             </ul>
             <p>We will respond to your inquiry within 30 days.</p>
         </div>
 
         <div class="section">
-            <h2>14. Consent</h2>
+            <h2>15. Consent</h2>
             <p>By using Jendo Health, you acknowledge that you have read and understood this Privacy Policy and consent to the collection, use, and disclosure of your information as described herein.</p>
         </div>
 
@@ -312,7 +317,7 @@
         
         <p style="text-align: center; color: #7f8c8d; font-size: 14px;">
             © 2026 Jendo Health. All rights reserved.<br>
-            This document was last updated on January 8, 2026.
+            This document was last updated on January 9, 2026.
         </p>
     </div>
 </body>
