Update support email and address formatting

--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
             <p>If you have questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact us:</p>
             <ul>
                 <li><strong>Email:</strong> info@jendoinnovations.com</li>
-                <li><strong>Support:</strong> info@jendoinnovations@gmail.com</li>
-                <li><strong>Address:</strong> [Bay 09, Trace Expert City, AC19, Colombo 10]</li>
+                <li><strong>Support:</strong> info@jendoinnovations.com</li>
+                <li><strong>Address:</strong> Bay 09, Trace Expert City, AC19, Colombo 10 </li>
             </ul>
             <p>We will respond to your inquiry within 30 days.</p>
         </div>
