remove carifornia and europian rigths

--- a/index.html
+++ b/index.html
@@ -265,50 +265,41 @@
         </div>
 
         <div class="section">
-            <h2>11. California Privacy Rights (CCPA)</h2>
-            <p>If you are a California resident, you have additional rights under the California Consumer Privacy Act (CCPA):</p>
+            <h2>11. Sri Lankan Privacy Rights (PDPA)</h2>
+            <p>If you are in Sri Lanka, you may have rights under the Personal Data Protection Act, No. 9 of 2022 (PDPA):</p>
             <ul>
-                <li>Right to know what personal information is collected</li>
-                <li>Right to know if personal information is sold or disclosed</li>
-                <li>Right to opt-out of the sale of personal information (we do not sell your information)</li>
-                <li>Right to request deletion of personal information</li>
-                <li>Right to non-discrimination for exercising your privacy rights</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>12. European Privacy Rights (GDPR)</h2>
-            <p>If you are in the European Economic Area (EEA), you have rights under the General Data Protection Regulation (GDPR):</p>
-            <ul>
+                <li>Right to be informed about how your personal data is used</li>
                 <li>Right to access your personal data</li>
-                <li>Right to rectification of inaccurate data</li>
-                <li>Right to erasure ("right to be forgotten")</li>
-                <li>Right to restrict processing</li>
-                <li>Right to data portability</li>
-                <li>Right to object to processing</li>
-                <li>Right to withdraw consent</li>
-                <li>Right to lodge a complaint with a supervisory authority</li>
+                <li>Right to rectification of inaccurate or incomplete data</li>
+                <li>Right to erasure of personal data, subject to legal obligations</li>
+                <li>Right to restrict processing in certain circumstances</li>
+                <li>Right to object to processing, including direct marketing</li>
+                <li>Right to withdraw consent where processing is based on consent</li>
+                <li>Right to lodge a complaint with the Data Protection Authority of Sri Lanka</li>
             </ul>
+            <p>To exercise these rights, please contact us at <a href="mailto:info@jendoinnovations.com">info@jendoinnovations.com</a>.</p>
         </div>
 
+        
+
         <div class="section">
-            <h2>13. Account Deletion</h2>
+            <h2>12. Account Deletion</h2>
             <p>If you wish to delete your Jendo Health account and all associated data, please contact our support team at <a href="mailto:info@jendoinnovations.com">info@jendoinnovations.com</a> with the subject line "Delete Account". We will verify your identity and delete your data within 30 days.</p>
         </div>
 
         <div class="section">
-            <h2>14. Contact Us</h2>
+            <h2>13. Contact Us</h2>
             <p>If you have questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact us:</p>
             <ul>
                 <li><strong>Email:</strong> info@jendoinnovations.com</li>
                 <li><strong>Support:</strong> info@jendoinnovations.com</li>
-                <li><strong>Address:</strong> Bay 09, Trace Expert City, AC19, Colombo 10 </li>
+                <li><strong>Address:</strong> Bay 09, Trace Expert City, AC19, Colombo 10</li>
             </ul>
             <p>We will respond to your inquiry within 30 days.</p>
         </div>
 
         <div class="section">
-            <h2>15. Consent</h2>
+            <h2>14. Consent</h2>
             <p>By using Jendo Health, you acknowledge that you have read and understood this Privacy Policy and consent to the collection, use, and disclosure of your information as described herein.</p>
         </div>
 
